--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,100 @@
 test.md
+
+node_modules/.bin/html-linter
+node_modules/.bin/html-linter.cmd
+node_modules/.bin/html-linter.ps1
+node_modules/ansi-styles/index.js
+node_modules/ansi-styles/license
+node_modules/ansi-styles/readme.md
+node_modules/balanced-match/index.js
+node_modules/balanced-match/LICENSE.md
+node_modules/balanced-match/README.md
+node_modules/balanced-match/.github/FUNDING.yml
+node_modules/brace-expansion/index.js
+node_modules/brace-expansion/LICENSE
+node_modules/brace-expansion/README.md
+node_modules/chalk/index.js
+node_modules/chalk/index.js.flow
+node_modules/chalk/license
+node_modules/chalk/readme.md
+node_modules/chalk/templates.js
+node_modules/chalk/types/index.d.ts
+node_modules/color-convert/CHANGELOG.md
+node_modules/color-convert/conversions.js
+node_modules/color-convert/index.js
+node_modules/color-convert/LICENSE
+node_modules/color-convert/README.md
+node_modules/color-convert/route.js
+node_modules/color-name/.eslintrc.json
+node_modules/color-name/.npmignore
+node_modules/color-name/index.js
+node_modules/color-name/LICENSE
+node_modules/color-name/README.md
+node_modules/color-name/test.js
+node_modules/commander/CHANGELOG.md
+node_modules/commander/index.js
+node_modules/commander/LICENSE
+node_modules/commander/Readme.md
+node_modules/commander/typings/index.d.ts
+node_modules/concat-map/.travis.yml
+node_modules/concat-map/index.js
+node_modules/concat-map/LICENSE
+node_modules/concat-map/README.markdown
+node_modules/concat-map/example/map.js
+node_modules/concat-map/test/map.js
+node_modules/escape-string-regexp/index.js
+node_modules/escape-string-regexp/license
+node_modules/escape-string-regexp/readme.md
+node_modules/fs.realpath/index.js
+node_modules/fs.realpath/LICENSE
+node_modules/fs.realpath/old.js
+node_modules/fs.realpath/README.md
+node_modules/glob/common.js
+node_modules/glob/glob.js
+node_modules/glob/LICENSE
+node_modules/glob/README.md
+node_modules/glob/sync.js
+node_modules/has-flag/index.js
+node_modules/has-flag/license
+node_modules/has-flag/readme.md
+node_modules/html-linter/.editorconfig
+node_modules/html-linter/.npmignore
+node_modules/html-linter/html-linter.json
+node_modules/html-linter/README.md
+node_modules/html-linter/tsconfig.json
+node_modules/html-linter/tslint.json
+node_modules/html-linter/yarn.lock
+node_modules/html-linter/bin/html-linter.js
+node_modules/html-linter/dist/html-linter-cli.js
+node_modules/html-linter/dist/linter.js
+node_modules/html-linter/dist/interfaces/config.js
+node_modules/html-linter/dist/interfaces/validation.js
+node_modules/html-linter/dist/utils/logger.js
+node_modules/html-linter/dist/validators/attributes.js
+node_modules/html-linter/dist/validators/indentation.js
+node_modules/html-linter/dist/validators/attributes/attr-quotes.js
+node_modules/html-linter/dist/validators/attributes/attr-vertical-align.js
+node_modules/html-linter/dist/validators/attributes/attr-whitespace.js
+node_modules/inflight/inflight.js
+node_modules/inflight/LICENSE
+node_modules/inflight/README.md
+node_modules/inherits/inherits_browser.js
+node_modules/inherits/inherits.js
+node_modules/inherits/LICENSE
+node_modules/inherits/README.md
+node_modules/minimatch/LICENSE
+node_modules/minimatch/minimatch.js
+node_modules/minimatch/README.md
+node_modules/once/LICENSE
+node_modules/once/once.js
+node_modules/once/README.md
+node_modules/path-is-absolute/index.js
+node_modules/path-is-absolute/license
+node_modules/path-is-absolute/readme.md
+node_modules/supports-color/browser.js
+node_modules/supports-color/index.js
+node_modules/supports-color/license
+node_modules/supports-color/readme.md
+node_modules/wrappy/LICENSE
+node_modules/wrappy/README.md
+node_modules/wrappy/wrappy.js
